{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 158,
  "lineage": "db613c14-fee4-b82d-6f16-bdb527dd5b17",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "alt-terra-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:926214381006:loadbalancer/terra-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "terra-elb-1332764939.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terra-elb",
            "idle_timeout": 100,
            "instances": [
              "i-04d3528fba05a451a",
              "i-076db0ed1096af6e6",
              "i-09e4bb95fc8d9d99a"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terra-elb",
            "security_groups": [
              "sg-0fd277cb3ccb66c40"
            ],
            "source_security_group": "926214381006/allow_http",
            "source_security_group_id": "sg-0fd277cb3ccb66c40",
            "subnets": [
              "subnet-00c09eb3742a36ef4",
              "subnet-07972fc1ecdad2210",
              "subnet-0b264687d02e28903"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "tags_all": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.webservers",
            "aws_security_group.webservers",
            "aws_subnet.testapp_public_subnet",
            "aws_vpc.alt-terra",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:926214381006:instance/i-04d3528fba05a451a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d3528fba05a451a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e5fe36cfe36a2ec",
            "private_dns": "ip-10-0-2-145.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.145",
            "public_dns": "ec2-52-91-13-108.compute-1.amazonaws.com",
            "public_ip": "52.91.13.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-056c4202a38604b27",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fd277cb3ccb66c40"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07972fc1ecdad2210",
            "tags": {
              "Name": "Server-0"
            },
            "tags_all": {
              "Name": "Server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd277cb3ccb66c40"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.testapp_public_subnet",
            "aws_vpc.alt-terra",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:926214381006:instance/i-09e4bb95fc8d9d99a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e4bb95fc8d9d99a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d033a80406f8d26f",
            "private_dns": "ip-10-0-3-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.78",
            "public_dns": "ec2-54-243-21-46.compute-1.amazonaws.com",
            "public_ip": "54.243.21.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d5c8aaacd5f7b43",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fd277cb3ccb66c40"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b264687d02e28903",
            "tags": {
              "Name": "Server-1"
            },
            "tags_all": {
              "Name": "Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd277cb3ccb66c40"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.testapp_public_subnet",
            "aws_vpc.alt-terra",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:926214381006:instance/i-076db0ed1096af6e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076db0ed1096af6e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d971ea6a78691672",
            "private_dns": "ip-10-0-4-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.127",
            "public_dns": "ec2-23-20-208-13.compute-1.amazonaws.com",
            "public_ip": "23.20.208.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a82f2413571a7b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fd277cb3ccb66c40"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c09eb3742a36ef4",
            "tags": {
              "Name": "Server-2"
            },
            "tags_all": {
              "Name": "Server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd277cb3ccb66c40"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.testapp_public_subnet",
            "aws_vpc.alt-terra",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testapp_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926214381006:internet-gateway/igw-0f8bdb3dfdd2e7d18",
            "id": "igw-0f8bdb3dfdd2e7d18",
            "owner_id": "926214381006",
            "tags": {
              "Name": "alt-terra-internet-gateway"
            },
            "tags_all": {
              "Name": "alt-terra-internet-gateway"
            },
            "vpc_id": "vpc-0c42b84a77d71f945"
          },
          "dependencies": [
            "aws_vpc.alt-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "testapp_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926214381006:route-table/rtb-0fff474d234b4e046",
            "id": "rtb-0fff474d234b4e046",
            "owner_id": "926214381006",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8bdb3dfdd2e7d18",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alt-terra-public-custom-rtb"
            },
            "tags_all": {
              "Name": "alt-terra-public-custom-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c42b84a77d71f945"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testapp_internet_gateway",
            "aws_vpc.alt-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testapp-custom-rtb-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048bdd04e21ee0ba4",
            "route_table_id": "rtb-0fff474d234b4e046",
            "subnet_id": "subnet-07972fc1ecdad2210"
          },
          "dependencies": [
            "aws_internet_gateway.testapp_internet_gateway",
            "aws_route_table.testapp_route_table",
            "aws_subnet.testapp_public_subnet",
            "aws_vpc.alt-terra",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067a4c4e246d1ba66",
            "route_table_id": "rtb-0fff474d234b4e046",
            "subnet_id": "subnet-0b264687d02e28903"
          },
          "dependencies": [
            "aws_internet_gateway.testapp_internet_gateway",
            "aws_route_table.testapp_route_table",
            "aws_subnet.testapp_public_subnet",
            "aws_vpc.alt-terra",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ab2bf374599f77",
            "route_table_id": "rtb-0fff474d234b4e046",
            "subnet_id": "subnet-00c09eb3742a36ef4"
          },
          "dependencies": [
            "aws_internet_gateway.testapp_internet_gateway",
            "aws_route_table.testapp_route_table",
            "aws_subnet.testapp_public_subnet",
            "aws_vpc.alt-terra",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926214381006:security-group/sg-0fd277cb3ccb66c40",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd277cb3ccb66c40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "926214381006",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c42b84a77d71f945"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.alt-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testapp_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926214381006:subnet/subnet-07972fc1ecdad2210",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07972fc1ecdad2210",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "926214381006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testapp-public-subnet-0"
            },
            "tags_all": {
              "Name": "testapp-public-subnet-0"
            },
            "vpc_id": "vpc-0c42b84a77d71f945"
          },
          "dependencies": [
            "aws_vpc.alt-terra",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926214381006:subnet/subnet-0b264687d02e28903",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b264687d02e28903",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "926214381006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testapp-public-subnet-1"
            },
            "tags_all": {
              "Name": "testapp-public-subnet-1"
            },
            "vpc_id": "vpc-0c42b84a77d71f945"
          },
          "dependencies": [
            "aws_vpc.alt-terra",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926214381006:subnet/subnet-00c09eb3742a36ef4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c09eb3742a36ef4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "926214381006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testapp-public-subnet-2"
            },
            "tags_all": {
              "Name": "testapp-public-subnet-2"
            },
            "vpc_id": "vpc-0c42b84a77d71f945"
          },
          "dependencies": [
            "aws_vpc.alt-terra",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alt-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926214381006:vpc/vpc-0c42b84a77d71f945",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0675c45436173142a",
            "default_route_table_id": "rtb-06d5f6bd3a80f4239",
            "default_security_group_id": "sg-0dabe773e02fe96e5",
            "dhcp_options_id": "dopt-0f7c17b99c6813d42",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c42b84a77d71f945",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d5f6bd3a80f4239",
            "owner_id": "926214381006",
            "tags": {
              "Name": "testapp-vpc"
            },
            "tags_all": {
              "Name": "testapp-vpc"
            }
          }
        }
      ]
    }
  ]
}